added trailer button option to the embed settings in the web interface and updated the TMDB API to find the best trailer available.

--- a/web/index.html
+++ b/web/index.html
@@ -719,6 +719,14 @@
                           </div>
 
                           <div class="form-check form-switch" style="padding: 0.75rem; background-color: var(--surface0); border-radius: 8px;">
+                            <input class="form-check-input" type="checkbox" id="EMBED_SHOW_BUTTON_TRAILER" name="EMBED_SHOW_BUTTON_TRAILER" checked>
+                            <label class="form-check-label" for="EMBED_SHOW_BUTTON_TRAILER" style="margin-left: 0.5rem;">
+                              <strong>Trailer Button</strong>
+                              <div style="font-size: 0.85rem; color: var(--subtext0); margin-top: 0.25rem;">Link to trailer</div>
+                            </label>
+                          </div>
+
+                          <div class="form-check form-switch" style="padding: 0.75rem; background-color: var(--surface0); border-radius: 8px;">
                             <input class="form-check-input" type="checkbox" id="EMBED_SHOW_BUTTON_WATCH" name="EMBED_SHOW_BUTTON_WATCH" checked>
                             <label class="form-check-label" for="EMBED_SHOW_BUTTON_WATCH" style="margin-left: 0.5rem;">
                               <strong>Watch Now Button</strong>
