added daily random pick feature

--- a/web/index.html
+++ b/web/index.html
@@ -719,14 +719,6 @@
                           </div>
 
                           <div class="form-check form-switch" style="padding: 0.75rem; background-color: var(--surface0); border-radius: 8px;">
-                            <input class="form-check-input" type="checkbox" id="EMBED_SHOW_BUTTON_TRAILER" name="EMBED_SHOW_BUTTON_TRAILER" checked>
-                            <label class="form-check-label" for="EMBED_SHOW_BUTTON_TRAILER" style="margin-left: 0.5rem;">
-                              <strong>Trailer Button</strong>
-                              <div style="font-size: 0.85rem; color: var(--subtext0); margin-top: 0.25rem;">Link to trailer</div>
-                            </label>
-                          </div>
-
-                          <div class="form-check form-switch" style="padding: 0.75rem; background-color: var(--surface0); border-radius: 8px;">
                             <input class="form-check-input" type="checkbox" id="EMBED_SHOW_BUTTON_WATCH" name="EMBED_SHOW_BUTTON_WATCH" checked>
                             <label class="form-check-label" for="EMBED_SHOW_BUTTON_WATCH" style="margin-left: 0.5rem;">
                               <strong>Watch Now Button</strong>
@@ -897,6 +889,44 @@
                         </label>
                         <div class="form-text">
                           When enabled, all bot responses (search and request results) are sent as ephemeral messages (only visible to the user who used the command). When disabled, successful results are visible to everyone in the channel, but warning messages (e.g., "already on Jellyfin") are always ephemeral.
+                        </div>
+                      </div>
+
+                      <!-- Daily Random Pick Section -->
+                      <div class="form-group" style="margin-top: 2rem; padding: 1rem; background-color: var(--surface0); border-radius: 8px; border-left: 4px solid var(--peach);">
+                        <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer; margin-bottom: 1rem;">
+                          <input type="checkbox" id="DAILY_RANDOM_PICK_ENABLED" name="DAILY_RANDOM_PICK_ENABLED" />
+                          Enable Daily Random Pick
+                        </label>
+                        <div class="form-text" style="margin-bottom: 1rem;">
+                          Send a daily recommendation of random media to a Discord channel. Great for discovering hidden gems!
+                        </div>
+
+                        <div class="form-group" style="margin-top: 1rem;">
+                          <label for="DAILY_RANDOM_PICK_CHANNEL_ID" style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Channel</label>
+                          <select
+                            id="DAILY_RANDOM_PICK_CHANNEL_ID"
+                            name="DAILY_RANDOM_PICK_CHANNEL_ID"
+                            style="width: 100%; background-color: var(--background); border: 1px solid var(--surface1); color: var(--text); padding: 0.75rem; border-radius: 8px; font-size: 1rem;">
+                            <option value="" style="color: var(--subtext0);">Select a channel...</option>
+                          </select>
+                          <div class="form-text" style="margin-top: 0.5rem;">
+                            Discord channel where daily picks will be sent
+                          </div>
+                        </div>
+
+                        <div class="form-group" style="margin-top: 1rem;">
+                          <label for="DAILY_RANDOM_PICK_INTERVAL" style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Interval (minutes)</label>
+                          <input type="number" id="DAILY_RANDOM_PICK_INTERVAL" name="DAILY_RANDOM_PICK_INTERVAL" placeholder="1440" min="1" max="525600" style="width: 100%; max-width: 150px; padding: 0.75rem; border-radius: 8px; border: 1px solid var(--surface1); background-color: var(--surface1); color: var(--text); font-size: 1rem;" />
+                          <div class="form-text" style="margin-top: 0.5rem;">
+                            How often to send a random pick in minutes (default: 1440 = 24 hours)
+                          </div>
+                        </div>
+
+                        <div style="margin-top: 1rem;">
+                          <button type="button" id="test-random-pick-btn" class="btn btn-secondary" style="padding: 0.75rem 1rem; margin: 0; display: inline-flex; align-items: center; gap: 0.5rem;">
+                            <i class="bi bi-shuffle"></i> Test Random Pick
+                          </button>
                         </div>
                       </div>
 
