--- a/web/index.html
+++ b/web/index.html
@@ -892,6 +892,16 @@
                         </div>
                       </div>
 
+                      <div class="form-group" style="margin-top: 1.5rem;">
+                        <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
+                          <input type="checkbox" id="JELLYSEERR_AUTO_APPROVE" name="JELLYSEERR_AUTO_APPROVE" />
+                          Jellyseerr Auto-Approve Requests
+                        </label>
+                        <div class="form-text">
+                          When enabled, requests made through the bot will be automatically approved in Jellyseerr. If disabled, requests will remain "Pending" for manual approval.
+                        </div>
+                      </div>
+
                       <!-- Daily Random Pick Section -->
                       <div class="form-group" style="margin-top: 2rem; padding: 1rem; background-color: var(--surface0); border-radius: 8px; border-left: 4px solid var(--peach);">
                         <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer; margin-bottom: 1rem;">
