--- a/web/index.html
+++ b/web/index.html
@@ -1154,6 +1154,7 @@
               >Report a Bug</a
             >
             <button id="logs-page-btn" class="footer-btn" data-i18n="footer.logs">Logs</button>
+            <span style="color: var(--subtext0); font-size: 0.85rem; margin-left: 1rem;">v1.4.0</span>
           </div>
           <div>
             <span data-i18n="footer.made_by">made by</span>
